# MineCube

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/models/: grass_block.mtl  white_tulip.mtl
assets/shaders/glsl330/: ambient.fs  fog.fs
src/: main.cpp
src/classes/: AudioManager.cpp  AudioManager.h  Block.cpp  Block.h  Game.cpp  Game.h  Inventory.cpp  Inventory.h  Player.cpp  Player.h  TexturesManager.cpp  TexturesManager.h  Utils.h  World.cpp  World.h  WorldGeneration.cpp  WorldGeneration.h  WorldSave.cpp  WorldSave.h  first-world.cpp  first-world.h  rlights.h
